--- a/SupermarketPricing/SupermarketPricing.csproj
+++ b/SupermarketPricing/SupermarketPricing.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Good.cs" />
+    <Compile Include="Goods.cs" />
     <Compile Include="Pricing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
