--- a/SupermarketPricing/SupermarketPricing.csproj
+++ b/SupermarketPricing/SupermarketPricing.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IPrice.cs" />
     <Compile Include="Pricing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuantityException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
